clean up transaction handler
Signed-off-by: Kelly Greco <kelly@swirldslabs.com>